[package]
name = "robinhood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
log = "0.4"
fern = "0.6"
humantime = "2.1"
